# optrack

./: .gitignore  LICENSE  README.md  dev-requirements.txt  noxfile.py  setup.cfg
conf/: config.yaml  sample-config.yaml
optrack/: __init__.py  config.py  main.py  options.py  optrack.py
tests/: test_import.py
tests/data/: open1.csv  open1_two_transactions.csv  open2.csv  open_close1.csv  open_close1_rev.csv  open_close2.csv  open_close3.csv  open_close4.csv
