[metadata]
name = optrack
version = 0.1.0
author = Omry Yadan
author_email = omry@yadan.net
description = A tool for tracking options trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omry/optrack
project_urls =
    Bug Tracker = https://github.com/omry/optrack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .

install_requires =
    hydra-core==1.2.0.dev2
    mongo
    texttable


packages = find:
python_requires = >=3.6
[options.packages.find]
where = optrack